# dso-agil

./: AGENTS.md  README.md  pyproject.toml
devsecops_agent/: __init__.py  adversary.py  adversary_cli.py  cli.py  constants.py  instructions.py  report.py  workflow.py
devsecops_agent/providers/: __init__.py  base.py
devsecops_agent/tooling/: __init__.py  common.py  crawler.py  headers_scan.py  methods_scan.py  probes.py  source_audit.py  tls_scan.py
docker/: Dockerfile.anthropic  Dockerfile.openai  docker-compose.yml
instructions/: adversary_workflow.md  base_security_agent.md  custom_instructions_example.md  customization_guide.md  predictable_workflow.md
scripts/: run_adversary_agent.py  run_devsecops_agent.py  web_crawler_scan.py  web_headers_scan.py  web_input_probes.py  web_methods_scan.py  web_pentest_bundle.py  web_source_audit.py  web_tls_scan.py
tests/: test_adversary.py  test_instructions.py  test_providers.py  test_report.py  test_source_audit.py  test_workflow.py
