[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-agent-loop"
version = "0.1.0"
description = "DevSecOps Agent in the Loop: predictable AI-assisted security pipeline stage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[project.scripts]
devsecops-agent = "devsecops_agent.cli:main"
devsecops-adversary = "devsecops_agent.adversary_cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["devsecops_agent*"]
